--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>glb-viewer</h1>
 - <a href=eightsense.html>EIGHT SENSE</a><br>
 - <a href=jig-mtg-room.html>jig.jp 8F 会議室</a><br>
+- <a href=echizen-city.html>越前市役所</a><br>
 </body>
 </html>
