--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 - <a href=eightsense.html>EIGHT SENSE</a><br>
 - <a href=jig-mtg-room.html>jig.jp 8F 会議室</a><br>
 - <a href=echizen-city.html>越前市役所</a><br>
+- <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
 </body>
 </html>
