--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 - <a href=jig-mtg-room.html>jig.jp 8F 会議室</a><br>
 - <a href=echizen-city.html>越前市役所</a><br>
 - <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
-- <a href=scc.html>SCC</a><br>
+- <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
 </body>
 </html>
