--- a/scc2.html
+++ b/scc2.html
@@ -9,7 +9,7 @@
 <body>
 <a-scene id="scene" background="color: black">
   <a-assets timeout="10000">
-    <a-asset-item id="sabae" src="./scc.glb"></a-asset-item>
+    <a-asset-item id="sabae" src="./scc2.glb"></a-asset-item>
   </a-assets>
   <a-entity gltf-model="#sabae" position="0 0 0"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
