--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 - <a href=echizen-city.html>越前市役所</a><br>
 - <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
 - <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
-- <a href=fukui-shimbun.html>福井新聞 風の森ホール</a><br>
+- <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 </body>
 </html>
