--- a/echizen-city.html
+++ b/echizen-city.html
@@ -21,7 +21,7 @@ onload = async () => {
 </head>
 
 <body>
-<a-scene id="scene" background="color: black">
+<a-scene id="scene" background="color: #333" renderer="colorManagement: true">
   <a-assets timeout="10000">
     <a-asset-item id="sabae" src="./echizen-city.glb"></a-asset-item>
   </a-assets>
