--- a/snowmen.html
+++ b/snowmen.html
@@ -24,7 +24,7 @@ onload = () => {
 };
 </script>
 <body>
-<a-scene id="scene" background="color: #333">
+<a-scene id="scene" background="color: #333" renderer="colorManagement: true">
   <a-assets timeout="10000">
     <a-asset-item id="snowman" src="./snowman.glb"></a-asset-item>
   </a-assets>
