--- a/jig-mtg-room.html
+++ b/jig-mtg-room.html
@@ -7,7 +7,7 @@
   <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 </head>
 <body>
-<a-scene background="color: #333">
+<a-scene id="scene" background="color: #333" renderer="colorManagement: true">
   <a-assets timeout="10000">
     <a-asset-item id="sabae" src="./20211015-jig8big.glb"></a-asset-item>
   </a-assets>
