--- a/scc2.html
+++ b/scc2.html
@@ -7,14 +7,12 @@
 </head>
 
 <body>
-<a-scene id="scene" background="color: black">
+<a-scene id="scene" background="color: #333" renderer="colorManagement: true">
   <a-assets timeout="10000">
     <a-asset-item id="sabae" src="./scc2.glb"></a-asset-item>
   </a-assets>
   <a-entity gltf-model="#sabae" position="0 0 0"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
-  <a-entity light="type: directional; color: #FFF; intensity: .5" position="-1 -1 -.5"></a-entity>
-  <a-entity light="type: directional; color: #FFF; intensity: 1" position="1 1 .5"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
   <a-entity id="cameraRig">
