--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 - <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
 - <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
+- <a href=kitchen.html>キッチン</a><br>
 </body>
 </html>
