--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 - <a href=jig-mtg-room.html>jig.jp 7F 会議室</a><br>
 - <a href=jig-megane-7f.html>jig.jp 7F</a><br>
 - <a href=echizen-city.html>越前市役所</a><br>
+- <a href=echizen-cityhall-road.html>越前市役所への道</a><br>
 - <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
 - <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 - <a href=kitchen.html>キッチン</a><br>
+<!--- <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>-->
+
 </body>
 </html>
