add a.cafe dressing-room

--- a/a.cafe-dressingroom.html
+++ b/a.cafe-dressingroom.html
@@ -9,9 +9,9 @@
 <body>
 <a-scene id="scene" background="color: #333" renderer="colorManagement: true">
   <a-assets timeout="10000">
-    <a-asset-item id="sabae" src="./a.cafe-dressingroom.glb"></a-asset-item>
+    <a-asset-item id="sabae" src="./a.cafe-dressingroom-2k.glb"></a-asset-item>
   </a-assets>
-  <a-entity gltf-model="#sabae" position="0 0 0"></a-entity>
+  <a-entity gltf-model="#sabae" position="0 0 -2"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
