--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 - <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 - <a href=kitchen.html>キッチン</a><br>
-<!--- <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>-->
+- <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>
 
 </body>
 </html>
