--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 - <a href=kitchen.html>キッチン</a><br>
 - <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>
+<hr>
+<a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
 </body>
 </html>
