--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 - <a href=echizen-city.html>越前市役所</a><br>
 - <a href=echizen-cityhall-road.html>越前市役所への道</a><br>
 - <a href=snowmen.html>雪だるま群</a> (<a href=snowman.usdz>AR</a>)<br>
-- <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>)<br>
+- <a href=scc.html>SCC</a> (<a href=scc2.html>プロジェクター周辺</a>、<a href=scc-b1f.html>地下1F＆ホール ドローン風操作</a>)<br>
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 - <a href=kitchen.html>キッチン</a><br>
 - <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>
