--- a/a.cafe-dressingroom.html
+++ b/a.cafe-dressingroom.html
@@ -2,6 +2,16 @@
 <title>a.cafe dressing room glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
+<!--
+  <script src="https://unpkg.com/aframe-mirror-component/dist/aframe-mirror-component.min.js"></script> 
+-->
+<!--
+  <script src="./aframe-mirror-component.js"></script>
+-->
+<!-- https://github.com/aalavandhaann/three_reflector -->
+<script src="./GroundSceneReflector.js"></script>
+<script src="./aframe-mirror.js"></script>
+
 <script type="module">
 </script>
 </head>
@@ -12,11 +22,18 @@
     <a-asset-item id="sabae" src="./a.cafe-dressingroom-2k.glb"></a-asset-item>
   </a-assets>
   <a-entity gltf-model="#sabae" position="0 0 -2"></a-entity>
+  <!--<a-sphere mirror></a-sphere>-->
+  <a-plane position="0 1.3 -2.60" rotation="0 0 0" width=.9 height=2.3 aframe-mirror="color:#FF0000;intensity:1.0;textureWidth:1024;textureHeight:1024;"></a-plane>
+
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
   <a-entity id="cameraRig">
-    <a-entity id="head" camera position="0 1.7 0" wasd-controls look-controls></a-entity>
+    <!--
+    <a-sphere radius=".5"></a-sphere>-->
+    <a-entity id="camera" camera position="0 1.7 0" wasd-controls look-controls>
+      <a-sphere radius=".2"></a-sphere>
+    </a-entity>
     <a-entity oculus-touch-controls="hand:left" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
     <a-entity oculus-touch-controls="hand:right" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
   </a-entity>
