--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 - <a href=fukui-shimbun.html>福井新聞 風の森ホール</a> (<a href=fukui-shimbun-three.html>Three-js ver.</a>)<br>
 - <a href=kitchen.html>キッチン</a><br>
 - <a href=a.cafe-dressingroom.html>a.cafe 試着室</a><br>
+- <a href=T-REX.html>恐竜体験</a>（ティラノサウルス by <a href=https://booth.pm/ja/items/2309013>pirero</a>）</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
