--- a/T-REX.html
+++ b/T-REX.html
@@ -21,7 +21,11 @@
     <a-asset-item id="sabae" src="./T-REX.glb"></a-asset-item>
     <!-- 3Dモデル ティラノサウルス 恐竜 T-REX　無料 https://booth.pm/ja/items/2309013 by pirero -->
   </a-assets>
-  <a-entity gltf-model="#sabae" position="-.5 0 -3.5"></a-entity>
+  <a-entity gltf-model="#sabae" position="-2.0 0 -5.5" scale="2.4 2.4 2.4"></a-entity>
+  <!-- 6mの棒 -->
+  <!--
+  <a-box position="1 3 0" width="0.1" height="6" depth="0.1"></a-box>
+  -->
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
