--- a/echizen-cityhall-all.html
+++ b/echizen-cityhall-all.html
@@ -3,6 +3,7 @@
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <script type="module" src="./wasd-controls-mode2.js"></script>
+<script type="module" src="./mc-controls.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
   <a-entity id="cameraRig">
-    <a-entity id="head" camera position="0 1.7 0" wasd-controls-mode2 look-controls x-drone-controls-mode2></a-entity>
+    <a-entity id="head" camera position="0 1.7 0" mc-controls x-wasd-controls-mode2 look-controls x-drone-controls-mode2></a-entity>
     <a-entity oculus-touch-controls="hand:left" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
     <a-entity oculus-touch-controls="hand:right" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
   </a-entity>
