--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 - <a href=T-REX.html>恐竜体験</a>（ティラノサウルス by <a href=https://booth.pm/ja/items/2309013>pirero</a>、<a href=T-REX-drone.html>ドローン風操作</a>）</a><br>
 - <a href=onojo.html>大野城</a><br>
 - <a href=https://code4fukui.github.io/cafe-slim/>SLIM The Coffee Resort - ケーキ探しゲーム</a><br>
+- <a href=cic-tokyo.html>CIC Tokyo</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
