--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 - <a href=onojo.html>大野城</a><br>
 - <a href=https://code4fukui.github.io/cafe-slim/>SLIM The Coffee Resort - ケーキ探しゲーム</a><br>
 - <a href=cic-tokyo.html>CIC Tokyo</a><br>
+- <a href=digitaltwin-mtg1-1.html>デジタルツインえちぜん製作実行委員会MTG 1-1</a>, <a href=digitaltwin-mtg1-2.html>1-2</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
