--- a/sasaki-mayer-slim.html
+++ b/sasaki-mayer-slim.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>バーチャル鯖江市佐々木市長 - glb-viewer</title>
+<title>バーチャル鯖江市佐々木市長 in SLIM The Coffee Resort - glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <script type="module" src="./wasd-controls-mode2.js"></script>
@@ -26,12 +26,11 @@ AFRAME.registerComponent('collider-check', {
   <a-assets timeout="10000">
     <a-asset-item id="mayer1" src="./sasaki-mayer1.glb"></a-asset-item>
     <a-asset-item id="mayer2" src="./sasaki-mayer2.glb"></a-asset-item>
+    <a-asset-item id="slim" src="https://code4fukui.github.io/cafe-slim/cafe-slim.glb"></a-asset-item>
   </a-assets>
   <a-entity gltf-model="#mayer1" position="0 0 -1" rotation="0 0 0"></a-entity>
   <a-entity gltf-model="#mayer2" position="0 0 -1" rotation="0 0 0"></a-entity>
-  <!--
   <a-entity gltf-model="#slim" position="-.8 -.2 1" rotation="0 0 0"></a-entity>
-  -->
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
   <!--
