add wooly land β

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 - <a href=digitaltwin-mtg1-1.html>デジタルツインえちぜん製作実行委員会MTG 1-1</a>, <a href=digitaltwin-mtg1-2.html>1-2</a><br>
 - <a href="sasaki-mayer.html">バーチャル鯖江市佐々木市長</a>（<a href="sasaki-mayer-slim.html">in SLIM The Coffee Resort</a>)<br>
 - <a href="miyagi-procon2021.html">マスクポーン＆みやぎプロコン2021 最終審査会</a> (<a href="miyagi-procon2021-nanamoru.html">ななもる</a>、<a href=miyagi-procon2021-calpis.html>アルティメットカルピスマシーン</a>)<br>
-- <a href="woolyland.html">wooly</a>(<a href=wooly-kyoryu.html>WoolyKyoryu</a>)<br>
+- <a href="woolyland.html">Wooly Land β</a> (<a href=wooly-kyoryu.html>WoolyKyoryu</a>)<br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
