--- a/woolyland.html
+++ b/woolyland.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>みやぎプロコン2021 最終審査会 - glb-viewer</title>
+<title>Wooly-Land β - glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <!--
@@ -13,7 +13,7 @@
   <a-assets timeout="10000">
     <a-asset-item id="base" src="./woolyland.glb"></a-asset-item>
   </a-assets>
-  <a-entity gltf-model="#base" position="0 10 -25" scale="150 150 150"></a-entity>
+  <a-entity gltf-model="#base" position="0 10 -75" scale="150 150 150"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
