--- a/woollyland.html
+++ b/woollyland.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>Wooly-Kyoryu - glb-viewer</title>
+<title>バーチャルwoolly展β - glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <!--
@@ -11,13 +11,13 @@
 <body>
 <a-scene id="scene" background="color: #4080e0" renderer="colorManagement: true">
   <a-assets timeout="10000">
-    <a-asset-item id="base" src="./wooly-kyoryu.glb"></a-asset-item>
+    <a-asset-item id="base" src="./woollyland.glb"></a-asset-item>
   </a-assets>
-  <a-entity gltf-model="#base" position="0 0 -2" scale="1 1 1"></a-entity>
+  <a-entity gltf-model="#base" position="0 10 -75" scale="150 150 150"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
     <!-- <a-sphere id="sphere" color="#f22"></a-sphere> -->
-  <a-entity id="cameraRig" position="0 0 0">
+  <a-entity id="cameraRig" position="2.5 0 0">
     <a-entity id="head" camera position="0 1.7 0" mc-controls look-controls x-drone-controls-mode2></a-entity>
     <a-entity oculus-touch-controls="hand:left" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
     <a-entity oculus-touch-controls="hand:right" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
