--- a/inventclub.html
+++ b/inventclub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>福井市発明クラブ - glb-viewer</title>
+<title>福井市少年少女発明クラブ - glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <!--
