--- a/inventclub-viewer.html
+++ b/inventclub-viewer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>福井市発明クラブ - glb-viewer</title>
+<title>福井市少年少女発明クラブ - glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <!--
@@ -44,9 +44,9 @@ const easeIn = (t) => t * t;
 const easeInOut = (t) => {
   t *= 2;
   if (t < 1) {
-		return .5 * t * t * t;
+    return .5 * t * t * t;
   }
-	t -= 2;
+  t -= 2;
   return .5 * (t * t * t + 2);
 };
 
