--- a/mantani-koshi.html
+++ b/mantani-koshi.html
@@ -31,13 +31,16 @@ onload = () => {
 <body>
 <a-scene id="scene" background="color: #222" x-background="color: #77ADD1" renderer="colorManagement: true">
   <a-assets timeout="10000">
-    <a-asset-item id="sabae" src="./mantani-koshi.glb"></a-asset-item>
+    <a-asset-item id="house" src="./mantani-koshi.glb"></a-asset-item>
+    <a-asset-item id="ichigo" src="https://code4fukui.github.io/xrgourmet/mantani-ichigo.glb"></a-asset-item>
   </a-assets>
-  <a-entity gltf-model="#sabae" position="0 0 0" rotation="0 195 0"></a-entity>
+  <a-entity gltf-model="#house" position="0 0 0" rotation="0 195 0"></a-entity>
+  <a-entity gltf-model="#ichigo" position="0 .51 2" rotation="0 0 0" scale="0.3 0.3 0.3"></a-entity>
   <a-entity light="type: ambient; color: #FFF"></a-entity>
     <!--<a-plane color="#888" height="300" width="300" rotation="-90 0 0"></a-plane>-->
-  <a-sphere id="sphere" color="#fff" position="8 1 -1" class="collidable" href="https://mantani.jp/kyoutorozu/room/"></a-sphere>
-  <a-sphere id="sphere" x-color="#222" position="5 1 0" class="collidable" href="https://code4fukui.github.io/vr-fukui/vr-view.html#img/vr-mantani.jpg" src="https://code4fukui.github.io/vr-fukui/img/vr-mantani.jpg"></a-sphere>
+  <a-sphere x-color="#222" position="5 1 0" class="collidable" href="https://code4fukui.github.io/vr-fukui/vr-view.html#img/vr-mantani.jpg" src="https://code4fukui.github.io/vr-fukui/img/vr-mantani.jpg"></a-sphere>
+  <a-box id="sphere" color="#fff" position="8 1 0" class="collidable"  src="mantani-icon.jpg" href="https://mantani.jp/kyoutorozu/room/"></a-box>
+  <a-entity gltf-model="#ichigo" position="12 0 0" rotation="0 -30 0" scale="5 5 5"></a-entity>
   <a-entity id="cameraRig">
     <a-entity id="head" camera position="0.83 1.7 3.88" mc-controls x-wasd-controls-mode2 look-controls x-drone-controls-mode2 raycaster="objects: .collidable; far: 0.5;" collider-check></a-entity>
     <a-entity oculus-touch-controls="hand:left" teleport-controls="button:trigger; collisionEntities:.collidable; cameraRig:#cameraRig; teleportOrigin:#head;"></a-entity>
