--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 - <a href=inventclub-viewer.html>福井市少年少女発明クラブ</a>(<a href=inventclub.html>自由移動版</a>、<a href=inventclub-ext.html>ドローン撮影による外観</a>（<a href=https://code4fukui.github.io/vr-fukui/vr-view.html#img/vr-inventclub.jpg>VRふくい360度写真</a>）、<a href=http://jiii-fukui.jp/f-hatsumeiclub>福井市少年少女発明クラブ | 一般社団法人福井県発明協会</a>)<br>
 - <a href=https://ichigojam.github.io/virtual-ichigojam/ichigojam-world.html>IchigoJam world</a><br>
 - <a href=mantani-koshi.html>越前市 京よろず Koshi - 萬谷</a><br>
+- <a href=https://code4fukui.github.io/bungee-jumping/>ふくいバンジージャンプ</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
