--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 - <a href=https://ichigojam.github.io/virtual-ichigojam/ichigojam-world.html>IchigoJam world</a><br>
 - <a href=mantani-koshi.html>越前市 京よろず Koshi - 萬谷</a><br>
 - <a href=https://code4fukui.github.io/bungee-jumping/>ふくいバンジージャンプ</a><br>
+- <a href=https://taisukef.github.io/office2022/>オフィスの設計</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
