--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 - <a href=mantani-koshi.html>越前市 京よろず Koshi - 萬谷</a><br>
 - <a href=https://code4fukui.github.io/bungee-jumping/>ふくいバンジージャンプ</a><br>
 - <a href=https://taisukef.github.io/office2022/>オフィスの設計</a><br>
+- <a href=tanaka-gankyo.html>田中眼鏡 福井店</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
