--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 - <a href=https://code4fukui.github.io/bungee-jumping/>ふくいバンジージャンプ</a><br>
 - <a href=https://taisukef.github.io/office2022/>オフィスの設計</a><br>
 - <a href=tanaka-gankyo.html>田中眼鏡 福井店</a><br>
+- <a href=luff-3f.html>LUFF 3F 福井市片町</a><br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
