--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 - <a href=https://taisukef.github.io/office2022/>オフィスの設計</a><br>
 - <a href=tanaka-gankyo.html>田中眼鏡 福井店</a><br>
 - <a href=luff-3f.html>LUFF 3F 福井市片町</a><br>
+- <a href=awara-acube.html>あわら市 A-CUBE 3</a>(<a href=http://www.city.awara.lg.jp/annai/7200/kankoshisetsu/p006550.html>金津本陣にぎわい広場と「aキューブ」 | あわら市ホームページ</a>)<br>
+- <a href=awara-ikossa.html>あわら市 金津本陣IKOSSA 大ホール</a>(<a href=http://www.city.awara.lg.jp/mokuteki/education/education0401/p000001.html>金津本陣ＩＫＯＳＳＡ（イコッサ） | あわら市ホームページ</a>)<br>
 <hr>
 <a href=https://github.com/code4fukui/glb-viewer>src on GitHub</a><br>
 
